# aoc-2022-rust

./: .gitignore  Cargo.toml
src/: aoc-2022-1.rs  aoc-2022-2.rs  lib.rs
