[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
sscanf = "0.4.0"

[[bin]]
name="aoc-2022-1"
path="src/aoc-2022-1.rs"

[[bin]]
name="aoc-2022-2"
path="src/aoc-2022-2.rs"